# postgres_scanner

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Makefile  README.md  all_pg_types.sql  all_tpch_queries.sql  bench-duckdb.sql  concurrency_test.cpp  create-lineitem-postgres.sql  create-postgres-tables.sh  pgconfigure  postgres_scanner.cpp  test.cpp  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: HighPriorityIssues.yml  InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  Linux.yml  MacOS.yml  MainDistributionPipeline.yml  Windows.yml  _extension_deploy.yml  _extension_deploy_wasm.yml  main.yml
include/: pg_config_paths.h
postgres/: CMakeLists.txt  configure
scripts/: extension-upload-wasm.sh
src/: CMakeLists.txt  postgres_attach.cpp  postgres_binary_copy.cpp  postgres_connection.cpp  postgres_copy_from.cpp  postgres_copy_to.cpp  postgres_execute.cpp  postgres_extension.cpp  postgres_filter_pushdown.cpp  postgres_query.cpp  postgres_scanner.cpp  postgres_stmt.cpp  postgres_storage.cpp  postgres_utils.cpp
src/include/: postgres_binary_copy.hpp  postgres_binary_reader.hpp  postgres_binary_writer.hpp  postgres_connection.hpp  postgres_conversion.hpp  postgres_filter_pushdown.hpp  postgres_result.hpp  postgres_scanner.hpp  postgres_scanner_extension.hpp  postgres_stmt.hpp  postgres_storage.hpp  postgres_text_writer.hpp  postgres_type_oids.hpp  postgres_utils.hpp  postgres_version.hpp
src/include/storage/: postgres_catalog.hpp  postgres_catalog_set.hpp  postgres_connection_pool.hpp  postgres_create_info.hpp  postgres_delete.hpp  postgres_index.hpp  postgres_index_entry.hpp  postgres_index_set.hpp  postgres_insert.hpp  postgres_optimizer.hpp  postgres_query.hpp  postgres_schema_entry.hpp  postgres_schema_set.hpp  postgres_table_entry.hpp  postgres_table_set.hpp  postgres_transaction.hpp  postgres_transaction_manager.hpp  postgres_type_entry.hpp  postgres_type_set.hpp  postgres_update.hpp  postgres_view_entry.hpp
src/storage/: CMakeLists.txt  postgres_catalog.cpp  postgres_catalog_set.cpp  postgres_clear_cache.cpp  postgres_connection_pool.cpp  postgres_delete.cpp  postgres_index.cpp  postgres_index_entry.cpp  postgres_index_set.cpp  postgres_insert.cpp  postgres_optimizer.cpp  postgres_query.cpp  postgres_schema_entry.cpp  postgres_schema_set.cpp  postgres_table_entry.cpp  postgres_table_set.cpp  postgres_transaction.cpp  postgres_transaction_manager.cpp  postgres_type_entry.cpp  postgres_type_set.cpp  postgres_update.cpp  postgres_view_entry.cpp
test/: all_pg_types.sql  create-decimal-tables.py  decimals.sql  other.sql  unbounded_numeric.sql
test/postgres_scanner/: arrays.test  aws-rds.test  bug63.test  bug69.test  bug71.test  bug74.test  bug76.test  bug77.test  count_star.test  decimals.test  interval.test  missing_table.test  nulls.test  numeric.test  simple.test  ssl.test  tpcds.test  tpch.test  types.test
test/sql/: arrays.test  aws-rds.test  bug63.test  bug69.test  bug71.test  bug74.test  bug76.test  bug77.test  count_star.test  daterange_array.test  decimals.test  interval.test  missing_table.test  nulls.test  ssl.test  tpcds.test  tpch.test  types.test  unbounded_numeric.test
test/sql/misc/: autoload.test  postgres_binary.test
test/sql/scanner/: arrays.test  aws-rds.test  bug63.test  bug69.test  bug71.test  bug74.test  bug76.test  bug77.test  count_star.test  daterange_array.test  decimals.test  interval.test  missing_table.test  nulls.test  postgres_query.test  ssl.test  tpcds.test  tpch.test  types.test
test/sql/storage/: attach_alter.test  attach_alter_rollback.test  attach_backslash.test  attach_case_sensitive_columns.test  attach_case_sensitive_tables.test  attach_checkpoint.test  attach_concurrent_queries.test  attach_connection_pool.test  attach_constraints.test  attach_copy_from_database.test  attach_create_if_exists.test  attach_create_index.test  attach_create_uppercase_names.test  attach_database_list.test  attach_database_size.test  attach_defaults.test  attach_delete.test  attach_describe.test  attach_detach.test  attach_drop.test  attach_drop_table_in_schema.test  attach_existing_constraints.test  attach_existing_enum.test  attach_existing_multidimensional_array.test  attach_explicit_schema.test  attach_filter_pushdown.test  attach_geometry.test  attach_giant_numeric.test  attach_if_not_exists.test  attach_information_schema.test  attach_insert_from_scan_large.test  attach_issue_146.test  attach_json.test  attach_keywords.test  attach_large_delete.test  attach_list_tables.test  attach_multi_join.test  attach_multi_join_large.test_slow  attach_non_existent.test  attach_null_byte.test  (+37 more)
test/sql/storage/view/: test_view.test  test_view_aliases.test  test_view_sql.test
test/storage/: attach_alter.test  attach_alter_rollback.test  attach_case_sensitive_columns.test  attach_case_sensitive_tables.test  attach_checkpoint.test  attach_concurrent_queries.test  attach_connection_pool.test  attach_constraints.test  attach_create_if_exists.test  attach_create_index.test  attach_database_list.test  attach_database_size.test  attach_defaults.test  attach_delete.test  attach_describe.test  attach_detach.test  attach_drop.test  attach_existing_enum.test  attach_existing_multidimensional_array.test  attach_filter_pushdown.test  attach_giant_numeric.test  attach_if_not_exists.test  attach_insert_from_scan_large.test  attach_keywords.test  attach_large_delete.test  attach_list_tables.test  attach_pages_per_task.test  attach_prefix.test  attach_read_only.test  attach_schemas.test  attach_simple.test  attach_transactions.test  attach_types.test  attach_types_blob.test  attach_types_char.test  attach_types_complex_composite.test  attach_types_date.test  attach_types_decimal.test  attach_types_enum.test  attach_types_interval.test  (+13 more)
